Add js/css files
Create node that injects the script functionality.
Current issue: Doesn't support the local-file url schema.
Maybe inline like other extension.
But then the data would have to be loaded multiple times, if re-used on multiple sites...
Still, at least I can see the window now :)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "asciinema-sphinx"
+name = "sphinx-auto-asciinema"
 version = "0.1.0"
 description = ""
 authors = ["Kai Norman Clasen <k.clasen@protonmail.com>"]
@@ -12,6 +12,8 @@ Sphinx = "^4.4.0"
 [tool.poetry.dev-dependencies]
 rich = "^11.2.0"
 jupyter = "^1.0.0"
+livereload = "^2.6.3"
+nodeenv = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
