--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ python = "^3.9"
 # asciinema = "^2.1.0"
 asciinema = { git = "https://github.com/asciinema/asciinema", branch = "develop"}
 Sphinx = "^4.4.0"
+pexpect = "^4.8.0"
+unsync = "^1.4.0"
+asyncer = "^0.0.1"
+fastcore = "^1.3.27"
 
 [tool.poetry.dev-dependencies]
 rich = "^11.2.0"
@@ -21,4 +25,4 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-asciinema_hello = "asciinema_sphinx:cli_hello"
+cli_hello = "sphinx_auto_asciinema:_cli_hello"
