--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ nodeenv = "^1.6.0"
 pytest = "^7.0.1"
 icecream = "^2.1.2"
 pytest-asyncio = "^0.18.1"
+furo = "^2022.3.4"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
