--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,8 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.8", "3.9", "3.10"]
-    runs-on: ubuntu-latest
+        os: [ubuntu-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
@@ -58,3 +59,18 @@ jobs:
         with:
           branch: gh-pages # The branch the action should deploy to.
           folder: docs/_build
+  release:
+    name: Release new version on GitHub
+    runs-on: ubuntu-latest
+    needs: build-documentation
+    if: ${{ github.event_name == 'push' }}
+    steps:
+      - name: Set up Git
+        uses: actions/checkout@v2
+      - name: Prepare repository
+        run: git fetch --unshallow --tags
+      - name: Run release script
+        run: bash .auto/run_auto.sh
+        env:
+          # To be able to trigger publish event
+          GITHUB_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
