--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,6 +70,13 @@ jobs:
         uses: actions/checkout@v2
       - name: Prepare repository
         run: git fetch --unshallow --tags
+      - uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Set-Up poetry
+        uses: abatilo/actions-poetry@v2.0.0
+        with:
+          poetry-version: 1.1.12
       - name: Run release script
         run: bash .auto/run_auto.sh
         env:
