--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -17,11 +17,13 @@ jobs:
         uses: actions/checkout@v2
       - uses: actions/setup-python@v2
         with:
-          python-version: 3.7 # minimum python version
-      - name: Set-Up poetry
-        uses: abatilo/actions-poetry@v2.0.0
+          python-version: 3.8 # minimum python version
+      - name: Install Poetry
+        uses: snok/install-poetry@v1
         with:
-          poetry-version: 1.1.12
+          virtualenvs-create: true
+          virtualenvs-in-project: true
+          installer-parallel: true
       - name: Build package
         run: poetry build
       - name: Publish
