--- a/.autorc
+++ b/.autorc
@@ -1,17 +1,17 @@
 {
-  "plugins": [
-    "git-tag",
-    "all-contributors",
-    "first-time-contributor",
-    [
-      "exec",
-      {
-        "beforeCommitChangelog": "bash .auto/update_version.sh",
-      }
-    ]
-  ],
-  "owner": "kai-tub",
-  "repo": "sphinx-cli-recorder",
-  "name": "Kai Norman Clasen",
-  "email": "k.clasen@protonmail.com"
+    "plugins": [
+        "git-tag",
+        "all-contributors",
+        "first-time-contributor",
+        [
+            "exec",
+            {
+                "beforeCommitChangelog": "bash .auto/update_version.sh"
+            }
+        ]
+    ],
+    "owner": "kai-tub",
+    "repo": "sphinx_cli_recorder",
+    "name": "Kai Norman Clasen",
+    "email": "k.clasen@protonmail.com"
 }
