--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -18,12 +18,16 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: 3.8 # minimum python version
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
+
+      - name: Set-Up poetry
+        uses: abatilo/actions-poetry@v2.0.0
         with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
+          poetry-version: 1.1.12
+      ### Custom
+      - name: Install node dependencies
+        run: |
+          just install
+      ###
       - name: Build package
         run: poetry build
       - name: Publish
