--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -24,6 +24,7 @@ jobs:
         with:
           poetry-version: 1.1.12
       ### Custom
+      - uses: extractions/setup-just@v1
       - name: Install node dependencies
         run: |
           just install
