--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,8 +14,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        # python-version: ["3.8", "3.9", "3.10"]
-        python-version: ["3.8"]
+        python-version: ["3.8", "3.9", "3.10"]
 
     runs-on: ubuntu-latest
     steps:
