--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,17 +14,17 @@ include = [
 ]
 
 [tool.poetry.dependencies]
+# dependencies-start
 python = "^3.8"
 asciinema = {git = "https://github.com/asciinema/asciinema", rev = "fdb6cb067ad73ded7253762534171bcf5a97c6e4"}
 Sphinx = "^4.4.0"
 pexpect = "^4.8.0"
 unsync = "^1.4.0"
 asyncer = "^0.0.1"
-fastcore = "^1.3.27"
-antidote = "^1.0.1"
 pydantic = "^1.9.0"
 PyYAML = "^6.0"
 yamale = "^4.0.3"
+# dependencies-end
 
 [tool.poetry.dev-dependencies]
 autodoc-pydantic = "^1.6.1"
@@ -49,6 +49,7 @@ black = "^22.3.0"
 mypy = "^0.942"
 types-PyYAML = "^6.0.5"
 types-docutils = "^0.18.0"
+sphinx-autodoc-typehints = "^1.18.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
