Fix old CI issue from cookiecutter template

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -35,6 +35,7 @@ jobs:
           just install
       - name: Check precommit
         run: |
+          source $VENV
           pre-commit run --all-files
       - name: Run tests from within poetry
         run: |
