Fix missing js/css files
- Files weren't added by poetry as they were excluded in `.gitignore`
- Update pyproject.toml to include them even if they are ignored in `.gitignore`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ documentation = "https://github.com/kai-tub.github.io/sphinx_cli_recorder"
 
 include = [
     "LICENSE",
+    # overwrite inherited exclude from .gitignore!
+    "asciinema-player.css",
+    "asciinema-player.min.js",
 ]
 
 [tool.poetry.dependencies]
