--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -1,13 +1,8 @@
-
 name: Publish to PyPI
 
 on:
   release:
     types: [published]
-
-# required since it is started from a previous workflow
-# env:
-#   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   upload_assets:
@@ -16,23 +11,14 @@ jobs:
     steps:
       - name: Set up Git
         uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v2
+      - name: Set up Python and PDM
+        uses: pdm-project/setup-pdm@main
         with:
-
           python-version: 3.8
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-      - uses: extractions/setup-just@v1
-      - name: Install node dependencies
+      - name: Install dependencies
         run: |
-          just install
-      - name: Build package
-        run: poetry build
+          pdm sync --dev --group docs
+          pdm plugin add pdm-bump
+          pdm run build-docs
       - name: Publish
-        run: poetry publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PWD }}
+        run: pdm publish --username ${{ secrets.PYPI_USER }} --password ${{ secrets.PYPI_PWD }}
