--- a/docs/_toc.yml
+++ b/docs/_toc.yml
@@ -1,3 +1,6 @@
 root: intro
 entries:
   - glob: "[0-9][0-9]_*"
+  - file: general/dependencies
+  - file: general/code_of_conduct
+  - file: general/license
