--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
         with:
           python-version: "3.8"
       - name: Install dependencies
+        uses: extractions/setup-just@v1
         run: |
-          pdm sync --dev --group docs
           pdm run just install
           pdm run build-docs
       # Must be run BEFORE GitHub Pages Deploy
