--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,30 +14,56 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-
-        python-version: [ "3.8", "3.9", "3.10" ]
+        python-version: ["3.8","3.9","3.10"]
 
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v2
+        with:
+          fetch-depth: 0
+      - name: Set up Python and PDM
+        uses: pdm-project/setup-pdm@main
         with:
           python-version: ${{ matrix.python-version }}
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-      - uses: extractions/setup-just@v1
       - name: Install dependencies
         run: |
-          just install
+          pdm install --dev --group :all
       - name: Check precommit
         run: |
-          source $VENV
-          pre-commit run --all-files
-      - name: Run tests from within poetry
+          pdm run pre-commit run --all-files
+      - name: Test mypy
         run: |
-          source $VENV
-          just test
+          pdm run check-types
+      - name: Run tests from within PDM
+        run: |
+          pdm run tests
+      # Enable if coveragepy is run within tests
+      # assumes parallel mode!
+      # - uses: actions/upload-artifact@v2
+      #   with:
+      #     name: coverage-data
+      #     path: ".coverage.*"
+      #     # allow to skip specific python version
+      #     if-no-files-found: ignore
+# coverage_reporter:
+  #   runs-on: ubuntu-latest
+  #   needs: test
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #       with:
+  #         fetch-depth: 0
+  #     - name: Set up Python and PDM
+  #       uses: pdm-project/setup-pdm@main
+  #       with:
+  #         python-version: "3.8"
+  #     - name: Install coverage reporting deps
+  #       run: |
+  #         pdm install --group test
+  #     - uses: actions/download-artifact@v2
+  #       with:
+  #         name: coverage-data
+  #     - name: Code coverage-reporter
+  #       uses: tj-actions/coverage-reporter@v5.1
+  #       with:
+  #         # assumes pdm uses coverage merge
+  #         coverage-command: "pdm run coverage_report"
