Add pdm plugin to main not publish

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           pdm run just install
+          pdm plugin add pdm-bump
           pdm run build-docs
       # Must be run BEFORE GitHub Pages Deploy
       # as the GitHub Pages action would check out a different
